plugins {
    id 'java'
}
group 'org.example'
version '1.0-SNAPSHOT'
sourceCompatibility = 1.8
targetCompatibility = 1.8
repositories {
    mavenCentral()
}
jar {
    manifest {
        attributes 'Main-Class': 'Main'
    }
    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}
dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
test {
    useJUnit()
    ignoreFailures = true
}
